labs/gatekeeper/ConstrainTemplateImagesLatest.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredimagestags
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredImagesTags
      validation:
        openAPIV3Schema:
          type: object
          properties:
            images:
              type: array
              items:
                type: string
  targets:
     - target: admission.k8s.gatekeeper.sh
       rego: |
         package k8srequiredimagestags
         violation[{"msg": msg}] {
            input.review.kind.kind = "Pod"
            input.review.operation = "CREATE"
            msg := "LoadBalancer Services are not permitted"
        }



          violation[{"msg": msg}]{
          input.review.kind.kind = "Pod"

          msg:=sprintf("Pod not allowd", image)

                    }
          violation[{"msg": msg}]{
          image:=input.review.object.spec.containers[_].image
          not count(split(image,":"))==2
          msg:=sprintf("Image %v missing tag", [image])

          }
          violation[{"msg": msg}]{
            c := input_containers(c)
            images = input.parameters.images[_]
            endswith(c,images)
            msg:=sprintf("REVIEW OBJECT: %v", [input.review])

          }
          input_containers(c){
            c := input.review.object.spec.containers[_].image

          }
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredImagesTags
metadata:
  name: image-tag-constraints
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pods"]
  parameters:
    images:
      - latest
      - stable
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-check-constrain
  labels:
    name: pod-check-constrain
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
