labs/gatekeeper/k8s-missing-labels.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
    name: k8srequiredlabels
spec:
    crd:
        spec:
            names:
                kind: K8sRequiredLabels
            validation:
                openAPIV3Schema:
                    properties:
                        labels:
                            type: array
                            items: string
    targets:
        - target: admission.k8s.gatekeeper.sh
          rego: |
            package k8srequiredlabels
            violation[{"msg": msg, "details": {"missing_labels": missing}}] {
                provided := {label | input.review.objects.metadata.labels[label]}
                required := {label | label := input.parameters.labels[_]}
                missing := required - provided 
                count(missing)>0
                msg := sprintf("Missing labels %v", [missing])
            }
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
    name: deny-namespace-wihout-labels
spec:
    match:
        kinds:
            - apiGroups: [""]
              kinds: ["Namespace"]
    parameters:
        message: "cks"
